# daily-report

./: Cargo.toml  README.md
src/: cli.rs  git.rs  lib.rs  main.rs
tests/: cli_tests.rs
